--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,32 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background:#F7F2EE ;
+  --foreground: #BF9D7D;
 }
 
-@media (prefers-color-scheme: dark) {
+/* TODO: add dark mode */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
-  color: var(--foreground);
+  color: var(--background);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+@layer base {
+  
+  
+}
+
+@layer components {
+  
+  
 }
